# fuck-your-ai-detection-rate

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start_web.bat  start_web.ps1  start_web.sh
.github/: PULL_REQUEST_TEMPLATE.md
app/: .env.example  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: DEVELOPMENT.md  DUAL_CONTRACT_DESIGN.md  RATE_AUDIT_DESIGN.md  RELEASE_CHECKLIST.md
prompts/: classical-rewrite.md  prewrite.md  prompt-registry.json  prompt-workflows.json  rewrite-pass-2.md
references/: checklist.md  format_rules.schema.json  optimization-roadmap.md  school_format_instruction.md
scripts/: academic_readability.py  academic_readability_regression.py  academic_register_drift_regression.py  ai_json.py  app_config.py  app_service.py  batch_rerun_task_regression.py  browser_e2e_smoke.mjs  candidate_selection_regression.py  capture_readme_assets.mjs  check_frontend_text.py  checkpoint_journal_regression.py  checkpoint_resume_regression.py  chunking.py  chunking_regression.py  dependency_governance_regression.py  detection_matching.py  detection_matching_regression.mjs  detection_matching_regression.py  detection_report_parser.py  detection_report_regression.py  deterministic_postprocess.py  deterministic_postprocess_integration_regression.py  deterministic_postprocess_regression.py  docx_audit.py  (+134 more)
(+565 files in other folders)
